# gabagool

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.devcontainer/: devcontainer.json  setup.sh
gabagool/: Cargo.toml  build.rs
gabagool-debug-adapter/: Cargo.toml  README.md  local-install.sh  package.json
gabagool-debug-adapter/src/: base64.rs  main.rs  server.rs  source_map.rs  transport.rs
gabagool-stencils/: Cargo.toml
gabagool-stencils/src/: stencil_context.h  stencils.c
gabagool/benches/: debugger.rs
gabagool/src/: compiler.rs  debugger.rs  ir.rs  lib.rs  parser.rs  snapshot.rs  store.rs  value_stack.rs
gabagool/src/jit/: assembler.rs  code_buffer.rs  mod.rs  stencils.rs
gabagool/tests/: jit_tests.rs  programs.rs  spec_tests.rs
programs/: ackermann.wat  binary_search.wat  bulk_memory.wat  call_chain.wat  demo.wasm  demo.wat  fibonacci.wat  indirect_call.wat  linked_list.wat  mandelbrot.wat  matrix.wat  matrix_chain.wat  nbody.wat  sha256.wat  sieve.wat  sort.wat  switch_dispatch.wat
src/: binary_grammar.rs  compiler.rs  debugger.rs  error.rs  execution_grammar.rs  exponential_decay.rs  ir.rs  leb128.rs  lib.rs  module.rs  parser.rs  snapshot.rs  store.rs
tests/: component_tests.rs  programs.rs  spec_tests.rs
