[workspace]
members = ["gabagool", "gabagool-debug-adapter", "gabagool-stencils"]
default-members = ["gabagool"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["friendlymatthew"]
license = "Apache-2.0"

[profile.release]
debug = 1
panic = "abort"
codegen-units = 1
