
[package]
name = "gabagool"
description = "a snapshotable WASM interpreter"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true


[dev-dependencies]
insta = "1"
wat = "1"

[dependencies]
libc = { version = "0.2.183", optional = true }

[build-dependencies]
wast = { version = "245.0.1", optional = true }
cc = { version = "1.2.57", optional = true }
object = { version = "0.38.1", optional = true }


[features]
core-tests = ["wast"]
component-tests = []
debugger = []
jit = ["cc", "libc", "object"]
